--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -1,9 +1,10 @@
 name: qa
 on: [push]
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - run: npm i
+      - run: npm run test
