--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -8,3 +8,11 @@ jobs:
       - uses: actions/setup-node@v1
       - run: npm i
       - run: npm run test
+
+  semantic-release:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+      - run: npm i
+      - run: npx semantic-release
